Fixes font weight to make more readable after HN comments

--- a/bin/css/stylesheet.css
+++ b/bin/css/stylesheet.css
@@ -27,7 +27,6 @@ body {
 	background-color:#F4F4F4;
 	line-height:1.7;
 	margin:auto;
-	font-weight:lighter;
 }
 
 img { border:none; }
